# hello-rust

./: .env  .gitignore  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: lib.rs  post.rs  prelude.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230110_000508_add_post_date.rs
src/: main.rs  models.rs  routes.rs
src/models/: api.rs  rust.rs
src/routes/hello/: rust.rs
