[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
axum = "0.6.1"
futures = "0.3.25"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros"] }
validator = { version = "0.16.0", features = ["derive"] }
sea-orm = { version = "0.10.6", features = ["sqlx-sqlite", "runtime-async-std-native-tls", "macros"] }
chrono = "0.4.23"
